# lexora

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE.txt  Makefile  README.md  api.py  config.yaml  docker-entrypoint.sh  go.mod  index.html  index.html.template  integration_test.go  main.go  main.py  models.py  pyproject.toml  run.sh
.claude/: settings.local.json
.claude/commands/: git-commit.md
.claude/skills/design-principles/: SKILL.md
.claude/skills/python-sensible-defaults/: SKILL.md
.github/workflows/: release.yml
_imported/lexora-console/: index.html
_imported/lexora-console/.github/workflows/: release.yml
_imported/lexora-feed/: .gitignore  CLAUDE.md  Dockerfile  go.sum
_imported/lexora-feed/api/: cors_test.go  rss.go  rss_test.go
_imported/lexora-feed/feed/: fetcher.go  fetcher_test.go  store_test.go
api/: cors.go  rss.go  rss_test.go
config/: config.go  config_test.go
data/: feeds.yaml
feed/: fetcher.go  fetcher_test.go  store.go  store_test.go
logging/: logging.go  logging_test.go
modules/: feed.js  kb-chat.js  mind.js
src/: app_state.py  ask_agent.py  chunker.py  config.py  embedder.py  models.py  pipeline.py  ports.py  vector_store.py
src/feed/: date_range.py  fetcher.py  service.py  store.py
src/knowledge/: __init__.py  ask_agent.py  chunker.py  file_interpreter.py  pipeline.py  vector_store.py
src/knowledge/loaders/: __init__.py  bookmarks.py  notes.py
src/lexora/: app_state.py  config.py  main.py  ports.py
src/lexora/feed/: fetcher.py  models.py  service.py  store.py
src/lexora/knowledge/: __init__.py  ask_agent.py  embedder.py  pipeline.py  vector_store.py
src/lexora/knowledge/loaders/: __init__.py  bookmarks.py  models.py  notes.py  sync_state.py
src/lexora/routers/: capabilities.py  feed.py  knowledge.py  settings.py
src/lexora/static/: index.html
src/lexora/static/modules/: feed.js  settings.js
src/loaders/: bookmarks.py  notes.py
src/routers/: capabilities.py  feed.py  knowledge.py  settings.py
static/: index.html
static/modules/: feed.js  mind.js  settings.js
static/styles/: app.css
styles/: app.css
tests/evals/: test_ask_agent.py
tests/unit/: conftest.py  test_api.py  test_app_state.py  test_ask_agent.py  test_bookmarks_loader.py  test_chunker.py  test_config.py  test_date_range.py  test_embedder.py  test_feed_fetcher.py  test_feed_models.py  test_feed_service.py  test_feed_store.py  test_file_interpreter.py  test_models.py  test_notes_loader.py  test_pipeline.py  test_vector_store.py
tests/unit/ingest/: test_bookmarks_loader.py  test_notes_loader.py
